@@ -1,0 +1,3 @@
+<ul><li><a href='http://www.nagios.org/news/77-news-announcements/374-nagios-plugins-201-released' target='_blank'>Nagios Plugins 2.0.1 Released</a></li><li><a href='http://www.nagios.org/news/77-news-announcements/373-nagios-core-405-released' target='_blank'>Nagios Core 4.0.5 Released</a></li><li><a href='http://www.nagios.org/news/77-news-announcements/372-nagios-core-404-released' target='_blank'>Nagios Core 4.0.4 Released</a></li>
+		<li><a href="http://www.nagios.org/news" target="_blank">More news...</a></li>
+		</ul>
