@@ -6,9 +6,12 @@ x.x.x - xx/xx/xxxx
 ------------------
 ENHANCEMENTS
 * Added name of authenticated user to JSON CGI results object (Eric Stanley)
-* Added Nagios Core versiont the Status CGI programstatus query (Eric Stanley)
+* Added Nagios Core version to the Status JSON CGI programstatus query (Eric Stanley)
 
 FIXES
+* Fixed bug #583: Status Check Output of (No output on stdout) stderr: (Eric
+Stanley - duplicate of bug #573)
+* Fixed bug #573: Service checks returns (No output on stdout) stderr (Eric Stanley)
 * Fixed bug #438: Reloads during downtime causes wrong availability calculations (Eric Stanley)
 * Archive JSON: Fixed bugs calculating availability (Eric Stanley)
 * Archive JSON: Allow missing logs to be skipped (Eric Stanley)
